# personal-agent-hub

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  copilot-instructions.md  ersgalzisrcpersonal-agent-hubspikes.venvScriptsactivate.bat  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RISK-REVIEW.md  ROADMAP-RISK-REVIEW.md  ROADMAP.md  STATE.md  config.json
.planning/diagrams/: architecture-diagram.mmd
.planning/notes/: architecture-repository-mapping.md  layered-memory-model.md  visible-routing-architecture.md
.planning/phases/00-validation-spikes/: 00-01-PLAN.md  00-01-SPIKE-RESULTS.md  00-01-SUMMARY.md  00-02-PLAN.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SPIKE-RESULTS.md  00-03-SUMMARY.md  00-CONTEXT.md  00-DISCUSSION-LOG.md  00-MODEL-EVALUATION-RESULTS.md  00-RESEARCH.md  00-REVIEW.md  00-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  questions.md
.planning/seeds/: inter-agent-routing-policy.md  nanoclaw-fallback-path.md  quality-loop-and-expansion-phase.md  taste-example-corpora-per-agent.md
config/: microclaw.config.yaml  models.yaml  sources.yaml
spikes/: find_models.py  openrouter_eval_output.txt  spike_openrouter.py  spike_watchlist.py  verification_error.txt  watchlist_output.txt
src/agent_hub/: config.py  db.py  discord.py  filter.py  ingester.py  pipeline.py
tests/: conftest.py  test_db.py  test_discord.py  test_filter.py  test_ingester.py  test_pipeline.py
(+53 files in other folders)
